# shaderGraphAI

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: app.h  mat.h  shader_graph.h  shader_lang.h  shader_nodes.h
src/: app.cpp  main.cpp  mat.cpp
